...
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:onClick="@{(view) -> viewModel.onItemClick(beer)}"
        android:padding="8dp">

        <CheckBox
            android:id="@+id/checkboxTab1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="@{beer.checkbox}"
            android:onCheckedChanged="@{(checkbox, checked) -> viewModel.onCheckboxClicked(checked, beer, true)}"
            android:padding="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
...
